--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -28,13 +28,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-r@v2
-        with:
-          use-public-rspm: true
-
-      #- name: Install R Package Build Dependencies
-      #  uses: r-hub/actions/setup-r-sysreqs@v1
-      #  with:
-      #    type: full
 
       - name: Install additional build dependencies
         run: sudo apt install jags
@@ -103,7 +96,7 @@ jobs:
         run: |
           files <- list.files("revdep-results", pattern = "*.rds", full.names = TRUE)
           res <- do.call(rbind.data.frame, lapply(files, readRDS))
-          saveRDS(res, file = "revdep-status.rds")
+          write.table(res, file = "revdep-results.csv", sep = ",", row.names = FALSE)
 
           res_error <- res[res$Status == "ERROR", ]
           if (nrow(res_error) > 0) {
@@ -116,4 +109,4 @@ jobs:
         if: always()
         with:
           name: revdep-status
-          path: revdep-status.rds
+          path: revdep-results.csv
