--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -14,7 +14,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        batch: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
+        batch: [
+          1, 2, 3, 4, 5, 6, 7, 8, 9, 10,
+          11, 12, 13, 14, 15, 16, 17, 18, 19, 20,
+          21, 22, 23, 24, 25, 26, 27, 28, 29, 30
+        ]
 
     name: Reverse dependency checks (batch ${{ matrix.batch }})
 
@@ -46,7 +50,7 @@ jobs:
       - name: Check reverse dependencies (batch ${{ matrix.batch }})
         run: |
           revdeps <- tools::package_dependencies("rstantools", reverse = TRUE, which = "all")$rstantools
-          revdeps <- split(revdeps,  cut(seq_along(revdeps), 20, labels = FALSE))
+          revdeps <- split(revdeps,  cut(seq_along(revdeps), 30, labels = FALSE))
           curr_revdeps <- revdeps[[${{ matrix.batch }}]]
           available_source_packages <- available.packages(type = "source")
 
@@ -61,7 +65,7 @@ jobs:
             mode = "wb"
           )
 
-          tools::check_packages_in_dir("./revdepchecks", Ncpus = 2, check_args=c("--no-manual"))
+          tools::check_packages_in_dir("./revdepchecks", check_args=c("--no-manual"))
 
           res <- tools::check_packages_in_dir_details("revdepchecks/")
           saveRDS(res, file = "batch-${{ matrix.batch }}-status.rds")
