--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -65,6 +65,8 @@ jobs:
             mode = "wb"
           )
 
+          pak::pak(revdep_details[,"Package"])
+
           tools::check_packages_in_dir("./revdepchecks", check_args=c("--no-manual"))
 
           res <- tools::check_packages_in_dir_details("revdepchecks/")
