--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -65,7 +65,7 @@ jobs:
             mode = "wb"
           )
 
-          pak::pak(revdep_details[,"Package"])
+          pak::pak(revdep_details[,"Package"], dependencies = TRUE)
 
           tools::check_packages_in_dir("./revdepchecks", check_args=c("--no-manual"))
 
