--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -15,9 +15,10 @@ jobs:
       fail-fast: false
       matrix:
         batch: [
-          1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11,
-          12,
-          13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30
+          1, 2, 3, 4, 5, 6, 7, 8, 9, 10
+          #, 11,
+          #12,
+          #13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30
         ]
 
     name: Reverse dependency checks (batch ${{ matrix.batch }})
@@ -50,7 +51,7 @@ jobs:
       - name: Check reverse dependencies (batch ${{ matrix.batch }})
         run: |
           revdeps <- tools::package_dependencies("rstantools", reverse = TRUE, which = "all")$rstantools
-          revdeps <- split(revdeps,  cut(seq_along(revdeps), 30, labels = FALSE))
+          revdeps <- split(revdeps,  cut(seq_along(revdeps), 10, labels = FALSE))
           curr_revdeps <- revdeps[[${{ matrix.batch }}]]
           available_source_packages <- available.packages(type = "source")
 
@@ -67,7 +68,7 @@ jobs:
 
           pak::pak(revdep_details[,"Package"], dependencies = TRUE)
 
-          tools::check_packages_in_dir("./revdepchecks", check_args=c("--no-manual"))
+          tools::check_packages_in_dir("./revdepchecks", check_args=c("--no-manual"), Ncpus=3)
 
           res <- tools::check_packages_in_dir_details("revdepchecks/")
           saveRDS(res, file = "batch-${{ matrix.batch }}-status.rds")
