--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -32,15 +32,17 @@ jobs:
       - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-r@v2
 
-      #- name: Install additional build dependencies
-      #  run: sudo apt-get install -y jags libmagick++-dev
+      - name: Install R Package Build Dependencies on MacOS
+        uses: r-hub/actions/setup-r-sysreqs@v1
+        with:
+          type: 'full'
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: local::.
-          #  local::. rstanarm BH RcppEigen RcppParallel github::ecmerkle/blavsam
-          #  bioc::DESeq2 github::stan-dev/cmdstanr github::CraigWangStat/eggCountsExtra
-          #  bioc::Rgraphviz rJava terra runjags magick geostan
+          extra-packages:
+            local::. rstanarm BH RcppEigen RcppParallel github::ecmerkle/blavsam
+            bioc::DESeq2 github::stan-dev/cmdstanr github::CraigWangStat/eggCountsExtra
+            bioc::Rgraphviz rJava terra runjags magick geostan
 
       - name: Install additional R dependencies
         run: |
