--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -72,7 +72,7 @@ jobs:
 
           pak::pak(revdep_details[,"Package"], dependencies = TRUE)
 
-          tools::check_packages_in_dir("./revdepchecks", check_args=c("--no-manual", "--no-vignettes"), Ncpus=3)
+          #tools::check_packages_in_dir("./revdepchecks", check_args=c("--no-manual", "--no-vignettes"), Ncpus=3)
           rcmdcheck::rcmdcheck(
             file.path(getwd(), "revdepchecks", pkg_tar_names),
             args=c("--as-cran","--no-manual"),
