--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -73,10 +73,13 @@ jobs:
           pak::pak(revdep_details[,"Package"], dependencies = TRUE)
 
           #tools::check_packages_in_dir("./revdepchecks", check_args=c("--no-manual", "--no-vignettes"), Ncpus=3)
-          rcmdcheck::rcmdcheck(
-            file.path(getwd(), "revdepchecks", pkg_tar_names),
-            args=c("--as-cran","--no-manual"),
-            env=c("_R_CHECK_CRAN_INCOMING_"="false", "_R_CHECK_DONTTEST_EXAMPLES_"="false"))
+          for (pkg in file.path(getwd(), "revdepchecks", pkg_tar_names)) {
+            print(pkg)
+            rcmdcheck::rcmdcheck(
+              pkg,
+              args=c("--as-cran","--no-manual"),
+              env=c("_R_CHECK_CRAN_INCOMING_"="false", "_R_CHECK_DONTTEST_EXAMPLES_"="false"))
+          }
 
           #res <- tools::check_packages_in_dir_details("revdepchecks/")
           #saveRDS(res, file = "batch-${{ matrix.batch }}-status.rds")
