fix R cmd check NOTE and regenerate doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(bayes_R2)
 export(init_cpp)
 export(log_lik)
 export(loo_R2)
+export(loo_epred)
 export(loo_linpred)
 export(loo_pit)
 export(loo_predict)
