Adde devtools to suggests for vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,8 @@ Suggests:
     pkgload,
     roxygen2 (>= 6.0.1),
     rmarkdown,
-    rstudioapi
+    rstudioapi,
+    devtools
 RoxygenNote: 7.3.3
 VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
