--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -42,7 +42,7 @@ articles:
       documentation, and more.
     contents:
       - developer-guidelines
-  - title: "Step by step guide for creating a package that depends on RStan"
+  - title: "Step-by-step guide"
     desc: >
       This vignette walks through the steps required to set up a package with
       a precompiled Stan model, from creating the initial package structure to
